--- a/package.json
+++ b/package.json
@@ -6,9 +6,9 @@
   "type": "module",
   "scripts": {
     "start": "node -r dotenv/config ./bin/www.js",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test1": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon -r dotenv/config ./bin/www.js",
-    "test1": "jest",
+    "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js",
     "test:watch": "jest --watch"
   },
   "repository": {
@@ -28,6 +28,7 @@
     "express": "^4.18.1",
     "express-jwt": "^7.7.5",
     "express-jwt-authz": "^2.4.1",
+    "jest": "^28.1.3",
     "jwks-rsa": "^2.1.4",
     "mongoose": "^6.4.7",
     "morgan": "^1.10.0",
